un poco mas avanzado

--- a/index.html
+++ b/index.html
@@ -18,29 +18,19 @@
             </label>
             <ul class="nav-list">
 
-                <a href="">
-                    <li>Home</li>
-                </a>
-                <a href="">
-                    <li>Acerca de mi</li>
-                </a>
-                <a href="">
-                    <li>Mis habilidades</li>
-                </a>
-                <a href="">
-                    <li>Experiencia</li>
-                </a>
-                <a href="">
-                    <li>Portafolio</li>
-                </a>
-                <a href="">
-                    <li>Contacto</li>
-                </a>
+                <li>Home</li>
+                <li>Acerca de mi</li>
+                <li>Mis habilidades</li>
+                <li>Experiencia</li>
+                <li>Portafolio</li>
+                <li>Contacto</li>
+
             </ul>
         </nav>
         <div class="home">
-            <h1>Mobile App Designer</h1>
-
+            <div class="titulo">
+                <h1>Mobile App Designer</h1>
+            </div>
             <div class="iconos">
                 <div class="icon-in">
                     <img src="./assets/images/cib_linkedin-in.svg">
@@ -59,6 +49,42 @@
 
         </div>
     </header>
+    <div class="acerca-de-mi">
+
+        <h2>Acerca de mi</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta inventore ab, recusandae blanditiis maiores quidem, ducimus autem fuga quo neque voluptatum, velit tempore odit ea minima consectetur qui facere explicabo possimus hic quos laudantium!
+            Explicabo harum suscipit quaerat at laboriosam, illo consequatur, obcaecati maiores quod distinctio voluptatem. Temporibus, quas animi iste numquam reiciendis recusandae earum ut placeat molestiae ea quibusdam reprehenderit amet dolorem, nostrum,
+            in id illo ipsa delectus nam impedit harum rem totam architecto illum? Fugiat quo corporis voluptatum.</p>
+    </div>
+
+    <div class="habilidades">
+        <h2>Mis habilidades</h2>
+        <div class="pizarra">
+            <ul>
+                <li>
+                    <link rel="icon" href="">
+                    <h4>UX/UI Desing</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque magnam laborum reiciendis quisquam quas corporis assumenda explicabo eum.</p>
+                </li>
+                <li>
+                    <h4>Product Designer</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At vero, fuga sequi nam enim ducimus nesciunt repudiandae consectetur aliquam rerum.</p>
+                </li>
+                <li>
+                    <h4>Interactive Desing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quia natus quaerat fugit repellat. Officia pariatur debitis similique aspernatur libero!</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="experiencia">
+        <h2>Experiencia</h2>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
 </body>
 
 </html>
