--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
                 <img src="./assets/images/menu 1.svg" alt="">
             </label>
             <ul class="nav-list">
-
                 <li>Home</li>
                 <li>Acerca de mi</li>
                 <li>Mis habilidades</li>
                 <li>Experiencia</li>
                 <li>Portafolio</li>
                 <li>Contacto</li>
-
             </ul>
         </nav>
         <div class="home">
@@ -43,48 +41,117 @@
                 </div>
             </div>
             <div class="imagen">
-                <img src="./assets/images/image.png" alt="" />
-
+                <div class="circulo-verde"></div>
+                <img src="./assets/images/image.png">
             </div>
 
         </div>
+
+        </div>
     </header>
-    <div class="acerca-de-mi">
 
-        <h2>Acerca de mi</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta inventore ab, recusandae blanditiis maiores quidem, ducimus autem fuga quo neque voluptatum, velit tempore odit ea minima consectetur qui facere explicabo possimus hic quos laudantium!
-            Explicabo harum suscipit quaerat at laboriosam, illo consequatur, obcaecati maiores quod distinctio voluptatem. Temporibus, quas animi iste numquam reiciendis recusandae earum ut placeat molestiae ea quibusdam reprehenderit amet dolorem, nostrum,
-            in id illo ipsa delectus nam impedit harum rem totam architecto illum? Fugiat quo corporis voluptatum.</p>
-    </div>
+    <section class="acerca-de-mi">
 
-    <div class="habilidades">
-        <h2>Mis habilidades</h2>
+        <h2>Acerca de mí</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptates officia asperiores alias aut possimus adipisci modi, voluptatum harum aperiam eligendi sint ipsa nostrum impedit nisi fugit explicabo maxime tenetur quidem a obcaecati sit
+            dolore unde! Nihil explicabo harum quidem porro, cupiditate reiciendis necessitatibus saepe earum expedita blanditiis magnam!.</p>
+    </section>
+
+    <section class="habilidades">
+        <div class="circulote">
+            <div class="circulote-hijo"></div>
+        </div>
+        <h2><span>Mis</span> habilidades</h2>
         <div class="pizarra">
             <ul>
-                <li>
-                    <link rel="icon" href="">
-                    <h4>UX/UI Desing</h4>
+                <li class="cards">
+                    <div class="encabezado">
+                        <img src="./assets/images/bombilla-de-idea.png">
+                        <h4>UX/UI Desing</h4>
+                    </div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque magnam laborum reiciendis quisquam quas corporis assumenda explicabo eum.</p>
                 </li>
-                <li>
-                    <h4>Product Designer</h4>
+                <li class="cards">
+                    <div class="encabezado">
+                        <img src="./assets/images/gobernante.png">
+                        <h4>Product Designer</h4>
+                    </div>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At vero, fuga sequi nam enim ducimus nesciunt repudiandae consectetur aliquam rerum.</p>
                 </li>
-                <li>
-                    <h4>Interactive Desing</h4>
+                <li class="cards">
+                    <div class="encabezado">
+                        <img src="./assets/images/iphone.png">
+                        <h4>Interactive Desing</h4>
+                    </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quia natus quaerat fugit repellat. Officia pariatur debitis similique aspernatur libero!</p>
                 </li>
             </ul>
         </div>
-    </div>
+    </section>
 
-    <div class="experiencia">
+    <section class="experiencia">
         <h2>Experiencia</h2>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+        <ul class="experiencias3">
+            <li>
+                <img src="./assets/images/ant-design_amazon-outlined.svg">
+                <p>UI designer<br>2015-2017</p>
+                <span>2 años</span>
+            </li>
+            <li>
+                <img src="./assets/images/cib_airbnb.svg">
+                <p>
+                    <span>Airbnb</span><br> senior UX/UI
+                    <br>2017-2018</p>
+                <span>1 año</span>
+            </li>
+            <li>
+                <img src="./assets/images/akar-icons_google-fill.svg"></img>
+                <p><span>Google</span>
+                    <br>Product<br> Designer
+                    <br> 2018-actualidad
+                </p>
+                <span>2 años</span>
+            </li>
+        </ul>
+    </section>
 
+    <section class="portafolio">
+        <div class="contenedor-imagen1">
+            <img src="./assets/images/image 11.jpg">
+            <h3>Fitness app</h3>
+        </div>
+        <div class="informacion">
+            <h3>Portafolio</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod laboriosam blanditiis illum quisquam sit quo nisi quas perspiciatis?</p>
+        </div>
+        <div class="contenedor-imagen">
+            <img src="./assets/images/Rectangle 47.jpg">
+            <h3>Management app</h3>
+        </div>
+    </section>
+
+    <section class="contacto">
+        <div class="circulo-decor"></div>
+        <h2>Contacto</h2>
+        <div class="contacto_info">
+            <div class="telefono">
+                <div class="icon-contacto">
+                    <img src="./assets/images/phone 3.svg"></div>
+                <h5>Número celular</h5>
+                <p>50000000</p>
+            </div>
+            <div class="email">
+                <div class="icon-contacto"> <img src="./assets/images/mail 3.svg"></div>
+
+                <h5>Email</h5>
+                <p>example@correo.com</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Hecho ❤ con Academlo</p>
+    </footer>
 </body>
 
 </html>
