--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
                 <img src="./assets/images/menu 1.svg" alt="">
             </label>
             <ul class="nav-list">
-                <li>Home</li>
-                <li>Acerca de mi</li>
-                <li>Mis habilidades</li>
-                <li>Experiencia</li>
-                <li>Portafolio</li>
-                <li>Contacto</li>
+                <li><a href="#casa-section">Home</a></li>
+                <li><a href="acerca-section">Acerca de mi</a></li>
+                <li><a href=#habilidades-section>Mis habilidades</a></li>
+                <li><a href=#experiencia-section>Experiencia</a></li>
+                <li><a href=#portafolio-section> Portafolio</a></li>
+                <li><a href="contacto-section">Contacto</a></li>
             </ul>
         </nav>
         <div class="home">
             <div class="titulo">
-                <h1>Mobile App Designer</h1>
+                <h1>Web Developer </h1>
             </div>
             <div class="iconos">
                 <div class="icon-in">
@@ -50,14 +50,13 @@
         </div>
     </header>
 
-    <section class="acerca-de-mi">
+    <section class="acerca-de-mi" id="acerca-section">
 
         <h2>Acerca de mí</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptates officia asperiores alias aut possimus adipisci modi, voluptatum harum aperiam eligendi sint ipsa nostrum impedit nisi fugit explicabo maxime tenetur quidem a obcaecati sit
-            dolore unde! Nihil explicabo harum quidem porro, cupiditate reiciendis necessitatibus saepe earum expedita blanditiis magnam!.</p>
+        <p>Me presento a mi misma como una persona perfeccionista al detalle,siempre dispuesta a trabajar en colaboracion con mis compañeros y con muy buena actitud hacia mi trabajo.Me encanta el desarrollo web y siempre estoy en constante aprendizaje.</p>
     </section>
 
-    <section class="habilidades">
+    <section class="habilidades" id="habilidades-section">
         <div class="circulote">
             <div class="circulote-hijo"></div>
         </div>
@@ -89,7 +88,7 @@
         </div>
     </section>
 
-    <section class="experiencia">
+    <section class="experiencia" id="experiencia-section">
         <h2>Experiencia</h2>
         <ul class="experiencias3">
             <li>
@@ -115,14 +114,14 @@
         </ul>
     </section>
 
-    <section class="portafolio">
+    <section class="portafolio" id="portafolio">
         <div class="contenedor-imagen1">
             <img src="./assets/images/image 11.jpg">
             <h3>Fitness app</h3>
         </div>
         <div class="informacion">
             <h3>Portafolio</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod laboriosam blanditiis illum quisquam sit quo nisi quas perspiciatis?</p>
+            <p>Esta seleccion son algunos de los proyectos en los que he trabajado</p>
         </div>
         <div class="contenedor-imagen">
             <img src="./assets/images/Rectangle 47.jpg">
@@ -130,7 +129,7 @@
         </div>
     </section>
 
-    <section class="contacto">
+    <section class="contacto" id="contacto-section">
         <div class="circulo-decor"></div>
         <h2>Contacto</h2>
         <div class="contacto_info">
@@ -138,13 +137,13 @@
                 <div class="icon-contacto">
                     <img src="./assets/images/phone 3.svg"></div>
                 <h5>Número celular</h5>
-                <p>50000000</p>
+                <p>+52 55 2903 9985</p>
             </div>
             <div class="email">
                 <div class="icon-contacto"> <img src="./assets/images/mail 3.svg"></div>
 
                 <h5>Email</h5>
-                <p>example@correo.com</p>
+                <p>fajardothaliz@gmail.com</p>
             </div>
         </div>
     </section>
