--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <section class="portafolio" id="portafolio">
         <div class="contenedor-imagen1">
-            <img src="./assets/images/image 11.jpg">
+            <img src="./assets/images/Captura web_13-7-2022_12209_127.0.0.1.jpeg">
             <h3>Fitness app</h3>
         </div>
         <div class="informacion">
