--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             </label>
             <ul class="nav-list">
                 <li><a href="#casa-section">Home</a></li>
-                <li><a href="acerca-section">Acerca de mi</a></li>
+                <li><a href="#acerca-section">Acerca de mi</a></li>
                 <li><a href=#habilidades-section>Mis habilidades</a></li>
                 <li><a href=#experiencia-section>Experiencia</a></li>
-                <li><a href=#portafolio-section> Portafolio</a></li>
-                <li><a href="contacto-section">Contacto</a></li>
+                <li><a href=#portafolio> Portafolio</a></li>
+                <li><a href="#contacto-section">Contacto</a></li>
             </ul>
         </nav>
         <div class="home">
@@ -53,7 +53,11 @@
     <section class="acerca-de-mi" id="acerca-section">
 
         <h2>Acerca de mí</h2>
-        <p>Me presento a mi misma como una persona perfeccionista al detalle,siempre dispuesta a trabajar en colaboracion con mis compañeros y con muy buena actitud hacia mi trabajo.Me encanta el desarrollo web y siempre estoy en constante aprendizaje.</p>
+        <p>Me llamo Thaliz Fajardo,me presento a mi misma como una persona perfeccionista al detalle,siempre dispuesta a
+            trabajar en
+            colaboracion con mis compañeros y con muy buena actitud hacia mi trabajo.Mi objetivo mas cercano a nivel
+            profesional es pasar de junior a senior en el menor tiempo posible.Me encanta el desarrollo web y
+            siempre estoy en constante aprendizaje para optimizar mi codigo.</p>
     </section>
 
     <section class="habilidades" id="habilidades-section">
@@ -68,21 +72,24 @@
                         <img src="./assets/images/bombilla-de-idea.png">
                         <h4>UX/UI Desing</h4>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque magnam laborum reiciendis quisquam quas corporis assumenda explicabo eum.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque magnam laborum reiciendis
+                        quisquam quas corporis assumenda explicabo eum.</p>
                 </li>
                 <li class="cards">
                     <div class="encabezado">
                         <img src="./assets/images/gobernante.png">
                         <h4>Product Designer</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At vero, fuga sequi nam enim ducimus nesciunt repudiandae consectetur aliquam rerum.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At vero, fuga sequi nam enim ducimus
+                        nesciunt repudiandae consectetur aliquam rerum.</p>
                 </li>
                 <li class="cards">
                     <div class="encabezado">
                         <img src="./assets/images/iphone.png">
                         <h4>Interactive Desing</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quia natus quaerat fugit repellat. Officia pariatur debitis similique aspernatur libero!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quia natus quaerat fugit repellat.
+                        Officia pariatur debitis similique aspernatur libero!</p>
                 </li>
             </ul>
         </div>
@@ -100,7 +107,8 @@
                 <img src="./assets/images/cib_airbnb.svg">
                 <p>
                     <span>Airbnb</span><br> senior UX/UI
-                    <br>2017-2018</p>
+                    <br>2017-2018
+                </p>
                 <span>1 año</span>
             </li>
             <li>
@@ -117,7 +125,7 @@
     <section class="portafolio" id="portafolio">
         <div class="contenedor-imagen1">
             <img src="./assets/images/Captura web_13-7-2022_12209_127.0.0.1.jpeg">
-            <h3>Fitness app</h3>
+            <h3>Online Store</h3>
         </div>
         <div class="informacion">
             <h3>Portafolio</h3>
@@ -135,15 +143,20 @@
         <div class="contacto_info">
             <div class="telefono">
                 <div class="icon-contacto">
-                    <img src="./assets/images/phone 3.svg"></div>
+                    <img src="./assets/images/phone 3.svg">
+                </div>
                 <h5>Número celular</h5>
                 <p>+52 55 2903 9985</p>
             </div>
             <div class="email">
-                <div class="icon-contacto"> <img src="./assets/images/mail 3.svg"></div>
+                <div class="icon-contacto">
+                    <img src="./assets/images/mail 3.svg">
+                </div>
 
                 <h5>Email</h5>
-                <p>fajardothaliz@gmail.com</p>
+                <a href="mailto:fajardothaliz@gmail.com">
+                    <p>fajardothaliz@gmail.com</p>
+                </a>
             </div>
         </div>
     </section>
