--- a/index.html
+++ b/index.html
@@ -31,18 +31,20 @@
             </div>
             <div class="iconos">
                 <div class="icon-in">
+                    <a href="https://www.linkedin.com/in/thaliz-fajardo-00026a244/"></a>
                     <img src="./assets/images/cib_linkedin-in.svg">
                 </div>
                 <div class="icon-ins">
                     <img src="./assets/images/ant-design_instagram-filled.svg">
                 </div>
                 <div class="icon-twtr">
-                    <img src="./assets/images/ant-design_twitter-outlined.svg">
+                    <img src="./assets/images/bxl-github.png">
+                    <a href="https://github.com/ThalizFajardo"></a>
                 </div>
             </div>
             <div class="imagen">
                 <div class="circulo-verde"></div>
-                <img src="./assets/images/image.png">
+                <img src="./assets/images/imgnew.png">
             </div>
 
         </div>
@@ -72,24 +74,24 @@
                         <img src="./assets/images/bombilla-de-idea.png">
                         <h4>UX/UI Desing</h4>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque magnam laborum reiciendis
-                        quisquam quas corporis assumenda explicabo eum.</p>
+                    <p> Hacemos que su pagina muestre los mejores diseños optimizados al detalle para que no haya ningun
+                        tipo de errores y ofrezer la mejor experiencia al usuario</p>
                 </li>
                 <li class="cards">
                     <div class="encabezado">
                         <img src="./assets/images/gobernante.png">
                         <h4>Product Designer</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At vero, fuga sequi nam enim ducimus
-                        nesciunt repudiandae consectetur aliquam rerum.</p>
+                    <p>Analizamos los problemas o necesidades que pueda tener tu producto, para mejorar estrategias de
+                        marketin en ventas.</p>
                 </li>
                 <li class="cards">
                     <div class="encabezado">
                         <img src="./assets/images/iphone.png">
                         <h4>Interactive Desing</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quia natus quaerat fugit repellat.
-                        Officia pariatur debitis similique aspernatur libero!</p>
+                    <p>Diseños atractivos y amigables a la vista e interactivos para hacer la experiencia lo mas
+                        inmersiva y personalizada posible</p>
                 </li>
             </ul>
         </div>
@@ -99,41 +101,44 @@
         <h2>Experiencia</h2>
         <ul class="experiencias3">
             <li>
-                <img src="./assets/images/ant-design_amazon-outlined.svg">
-                <p>UI designer<br>2015-2017</p>
-                <span>2 años</span>
+                <a href="https://6328f61f39c047032d6c4499--chic-bubblegum-6e9cad.netlify.app/">
+                    <img src="./assets/images/quotesAppImg.jpeg" style="height:5rem ;">
+                    <span>Quotes App</span>
+                </a>
+
             </li>
             <li>
-                <img src="./assets/images/cib_airbnb.svg">
-                <p>
-                    <span>Airbnb</span><br> senior UX/UI
-                    <br>2017-2018
-                </p>
-                <span>1 año</span>
+                <a href="https://63163593b38a9513e522c938--spontaneous-strudel-0306bb.netlify.app/">
+                    <img src="./assets/images/ewaterAppImg.jpeg" style="height:5rem;">
+                    <span>Weater App</span>
+                </a>
+
             </li>
             <li>
-                <img src="./assets/images/akar-icons_google-fill.svg"></img>
-                <p><span>Google</span>
-                    <br>Product<br> Designer
-                    <br> 2018-actualidad
-                </p>
-                <span>2 años</span>
+                <a href="https://6342528143c38a4ee6073b74--neon-scone-747a15.netlify.app/">
+                    <img src="./assets/images/rymfoto.jpeg" style="height:5rem;">
+                    <span>Rick & Mory Wiki</span>
+                </a>
             </li>
         </ul>
     </section>
 
     <section class="portafolio" id="portafolio">
-        <div class="contenedor-imagen1">
-            <img src="./assets/images/Captura web_13-7-2022_12209_127.0.0.1.jpeg">
-            <h3>Online Store</h3>
+        <div>
+            <a href="https://6343b3c143c38a3648073a1b--serene-llama-fdc802.netlify.app/">
+                <img src="./assets/images/e-comercefoto.jpeg" class="contenedor-imagen1">
+                <h3>e-commerce(tech)</h3>
+            </a>
         </div>
         <div class="informacion">
             <h3>Portafolio</h3>
             <p>Esta seleccion son algunos de los proyectos en los que he trabajado</p>
         </div>
         <div class="contenedor-imagen">
-            <img src="./assets/images/Rectangle 47.jpg">
-            <h3>Management app</h3>
+            <a href="https://63445d92e8139737d3edd518--eclectic-jelly-0adca9.netlify.app/">
+                <img src="./assets/images/Captura web_13-7-2022_12209_127.0.0.1.jpeg">
+                <h3>e-commerce(clothes)</h3>
+            </a>
         </div>
     </section>
 
